k8s/apps/vod-arr/seerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: seerr
    app.kubernetes.io/part-of: seerr
    app.kubernetes.io/version: 3.4.1
  name: seerr
spec:
  ports:
    - name: http
      port: 5055
      protocol: TCP
      targetPort: http
  selector:
      app.kubernetes.io/component: server
      app.kubernetes.io/name: seerr
      app.kubernetes.io/part-of: seerr
  type: ClusterIP
